sdssgryphon-12: Fixed pinned background header spacing issue.

--- a/docroot/profiles/sdss/sdss_profile/themes/sdss_subtheme/src/scss/components/pinned-bg/_pinned-bg.scss
+++ b/docroot/profiles/sdss/sdss_profile/themes/sdss_subtheme/src/scss/components/pinned-bg/_pinned-bg.scss
@@ -3,7 +3,7 @@
     width: 100%;
 
     .spacer {
-        height: 50svh;
+        height: 30svh;
     }
 
     .su-pinned-slide {
